--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -77,33 +77,15 @@
               
             <section id="content2">
                 <div class="tab-content">
-                    <!--<div class="form-result">
-                        <label class="subTitle">Lista de Resultado</label>
-                        <button type="button">
-                            <i class="fa fa-line-chart" aria-hidden="true"></i>
-                            Analizar
-                        </button>
-                        <select id="ID_Formato">
-                            <option value="">Formato</option>
-                        </select>                        
-                    </div>
-                    <hr>-->
                     <div class="form-count">
                         <div class="form-count-count" data-dojo-attach-point="ID_Count">0</div>
-                        <!--<div class="form-count-count">-->
-                            <!--
-                            <button type="button">
-                                <i class="fa fa-line-chart" aria-hidden="true"></i>
-                                Analizar
-                            </button>
-                            <select id="ID_Formato">
-                                <option value="">Formato</option>
-                            </select> 
-                            -->
-                            <div class="form-count-title" data-dojo-attach-point="ID_CountText">Coincidencias</div>
-                            <div class="form-count-resul" data-dojo-attach-point="ID_CountResult">0 - 0</div>
-                        <!--</div>-->
+                        <div class="form-count-title" data-dojo-attach-point="ID_CountText">Coincidencias</div>
+                        <div class="form-count-resul" data-dojo-attach-point="ID_CountResult">0 - 0</div>                        
                     </div>
+
+                    <label class="subTitle">Resumen de diagnóstico:</label>
+
+                    <!-- CSS Load -->
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load"><div></div><div></div><div></div></div>
                     <!--   
                     <div class="form-result form-scroll" data-dojo-attach-point="ID_Result_List">
