--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -14,12 +14,13 @@ body { background-color: #f6f6f6; }
   margin: 0 auto;
   padding: 10px;
   width: 1200px;
+  position: relative;
 }
 .report-main .report-title{
   background-color: #4999b0;
   color: #FFFFFF;
   padding: 7px 15px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .report-main .report-title h2 {
@@ -41,6 +42,7 @@ body { background-color: #f6f6f6; }
   display: flex;
   margin-bottom: 10px;
 }
+
 
 /* CONTENT */
 .report-content > .report-aside {
@@ -91,4 +93,169 @@ body { background-color: #f6f6f6; }
   font-size: 12px;
   height: 450px;
   width: 100%;
+}
+
+.report-table {
+  display: block;
+  position: relative;
+  z-index: 2000;
+}
+
+/***************************************/
+.tabs {
+  position: relative;
+/*margin: 40px ;*/
+width: 100%;
+}
+
+.tabs input {
+position: absolute;
+z-index: 1000;
+width: 120px;
+height: 40px;
+left: 0px;
+top: 0px;
+opacity: 0;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+cursor: pointer;
+}
+.tabs input#tab-2{
+top: 40px;
+}
+.tabs input#tab-3{
+top: 80px;
+}
+.tabs input#tab-4{
+top: 120px;
+}
+
+.tabs label {
+  background-color: #4999b0;
+  color: #FFFFFF;
+  font-size: 15px;
+  line-height: 40px;
+  height: 40px;
+  position: relative;
+  padding: 0 20px;
+  display: block;
+  width: 90px;
+  letter-spacing: 1px;
+  /*text-transform: uppercase;*/
+  font-weight: bold;
+  text-align: right;
+  float: left;
+  clear: both;
+}
+
+.tabs label:after {
+  content: '';
+background: #fff;
+position: absolute;
+right: -2px;
+top: 0;
+width: 2px;
+height: 100%;
+}
+
+.tabs input:hover + label {
+  background: #5ba4a4;
+}
+
+.tabs label:first-of-type {
+  z-index: 4;
+}
+
+.tab-label-2 {
+  z-index: 3;
+}
+
+.tab-label-3 {
+  z-index: 2;
+}
+
+.tab-label-4 {
+  z-index: 1;
+}
+
+.tabs input:checked + label {
+  background: #fff;
+  color: #777777;
+z-index: 6;
+}
+
+.clear-shadow {
+clear: both;
+}
+
+.content {
+  background: #fff;
+position: relative;
+  
+margin: -175px 0 0 120px;
+height: 400px;
+z-index: 5;
+overflow: hidden;
+  
+  
+}
+
+.content div {
+  position: absolute;
+top: 0;
+width: 100%;
+padding: 10px 40px;
+z-index: 1;
+  opacity: 0;
+  -webkit-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  -ms-transition: all linear 0.5s;
+  transition: all linear 0.5s;
+}
+
+.content div{
+-webkit-transform: translateY(-450px);
+-moz-transform: translateY(-450px);
+-o-transform: translateY(-450px);
+-ms-transform: translateY(-450px);
+transform: translateY(-450px);
+}
+
+
+
+.tabs input.tab-selector-1:checked ~ .content .content-1,
+.tabs input.tab-selector-2:checked ~ .content .content-2,
+.tabs input.tab-selector-3:checked ~ .content .content-3,
+.tabs input.tab-selector-4:checked ~ .content .content-4 {
+  -webkit-transform: translateY(0px);
+-moz-transform: translateY(0px);
+-o-transform: translateY(0px);
+-ms-transform: translateY(0px);
+transform: translateY(0px);
+  z-index: 100;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  opacity: 1;
+  -webkit-transition: all ease-out 0.3s 0.3s;
+  -moz-transition: all ease-out 0.3s 0.3s;
+  -o-transition: all ease-out 0.3s 0.3s;
+  -ms-transition: all ease-out 0.3s 0.3s;
+  transition: all ease-out 0.3s 0.3s;
+}
+
+.content div h2,
+.content div h3{
+color: #398080;
+}
+.content div p {
+font-size: 14px;
+line-height: 22px;
+font-style: italic;
+text-align: left;
+margin: 0;
+color: #777;
+padding-left: 15px;
+font-family: Cambria, Georgia, serif;
+border-left: 8px solid rgba(63,148,148, 0.1);
 }
