Se agrego las a capas a calcular(estadística) del RESUMEN DIAGNOSTICO

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -122,7 +122,7 @@
                                 <option value="">GeoJSON</option>
                                 <option value="">WKT</option>
                             </select>  
-                            <button type="button" data-dojo-attach-point="ID_Diagnosis">
+                            <button type="button" data-dojo-attach-point="ID_Download_Result">
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 Descargar
                             </button>    
@@ -144,7 +144,7 @@
                         </button>
                     </div>
                 
-
+                    <!--
                     <div class="form-content">
                         <label class="subTitle">Lista de Análisis</label>
                         
@@ -152,11 +152,32 @@
                             <option value="">Formato</option>
                         </select>                        
                     </div>
-                    <hr>
+                    -->
                     <div class="form-content form-scroll">
                         
                     </div>
+
+
+                    <div class="form-result-button">
+                        <span>
+                            <select>
+                                <option value="">XLS</option>
+                                <option value="">CSV</option>
+                                <option value="">JSON</option>
+                                <option value="">SHP (.zip)</option>
+                                <option value="">KMZ</option>
+                                <option value="">GeoJSON</option>
+                                <option value="">WKT</option>
+                            </select>  
+                            <button type="button">
+                                <i class="fa fa-download" aria-hidden="true"></i>
+                                Descargar
+                            </button>    
+                        </span>                    
+                    </div>
+
                 </div>
+            
             </section>
         </main>
         
