Se presento problema en el conteo de los registros EXECUTE con el límitados de 1000 registros del servicio. Se opto por cambiar a EXECUTE_FOR_COUNT

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -136,8 +136,8 @@
                 <div class="tab-content">
                     
                     <div class="form-content">
-                        <label class="subTitle">Rad. Influencia (m)</label>
-                        <input type="text" value="" placeholder="##">
+                        <label class="subTitle">Distancia de zona de influencia</label>
+                        <input type="number" value="" placeholder="##">
                         <button type="button">
                             <i class="fa fa-refresh" aria-hidden="true"></i>
                             Refrescar
