--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -366,3 +366,49 @@ input.tabs:checked + label {
 .tabs .form-scroll::-webkit-scrollbar-track {
   border-radius: 10px;  
 }
+
+/**********************************************/
+
+.popup-alert {
+  position: fixed;
+  z-index: 40000;
+  color: #ddd;
+  background-color: rgba(0,0,0,0.8);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.popup-alert .popup-message {
+  background-color: white;
+  box-sizing: border-box; 
+  margin: 0 auto;
+  margin-top: 20%;
+  height: 195px;
+  width: 560px;
+}
+.popup-alert .popup-message div.popup-text {
+  color: #856404;
+  display: inline-block;
+  font-family:'Times New Roman', Times, serif;  
+  vertical-align: top;  
+}
+.popup-alert .popup-message div.popup-text h1 { 
+  border-bottom: 2px solid #856404;
+  padding: 0px 5px 5px 5px;
+}
+.popup-alert .popup-message div.popup-text:nth-child(1) {
+  background-image: url("../images/message-100.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100% !important;
+  width: 39%;
+}
+.popup-alert .popup-message div.popup-text:nth-child(2) {
+  background-color: #fff3cd;
+  box-sizing: border-box;
+  border-color: #ffeeba;
+  height: 100% !important;
+  padding: 0px 20px;  
+  width: 60%;
+}
